# cams_downscaling

./: README.md  conda-dwld.yaml  conda-model.yaml  conda-preprocess.yaml  environment.yml  pyproject.toml
cams_downscaling/: clusterize.py  datatypes.py  infer_model.py  infer_model_cams_raw.py  infer_model_maps.py  infer_model_maps_memory_problems.py  run_model.py  train_model.py  utils.py
cams_downscaling/old/: train_model_old.py
cams_downscaling/readers/: build_height.py  cams.py  eea.py  era5.py  era5_land.py  land_cover.py  population.py  roads.py  topography.py
cams_downscaling/test/: variogram.py
config/: paths.yml  places.yml  pollutants.yml  regions.yml
data/: conda-data.yaml
data/database_functions/: create_all_stations.py  create_stations_table.py
data/download/: cams.py  cams_forecast.py  cams_optimized.py  eea.py  era5.py  (+2 more)
downloader/: era5.py  era5_land.py  nasa_topography.py  nasa_topography.sh
model/: dataloader.py
model_exploration/: data_exploration.ipynb  model_italy_test.ipynb  model_poland_test.ipynb  tests.ipynb
models/: 2000.joblib  2001.joblib  2010.joblib  2011.joblib  2020.joblib  2021.joblib  2030.joblib  2031.joblib  2040.joblib  2041.joblib  2051.joblib  2060.joblib  2061.joblib  2070.joblib  2071.joblib  2080.joblib  2081.joblib  2090.joblib  2091.joblib  2100.joblib  2101.joblib
preprocessor/: cut_era5.py  data_viewer.ipynb  eprtr.py  era5-land.py  era5.py
validation/: analysis.ipynb  cams_optimized.ipynb  clusters.ipynb  conda-validate.yaml  diagrams.py  interpolate_cams.py  mqi_maps.py  time_series.py  validator.py
(+27 files in other folders)
