# https://stackoverflow.com/questions/63326840/specifying-command-line-scripts-in-pyproject-toml
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cams_downscaling"
description = "AI Model to downscale CAMS at observation sites"
# readme = "README.md"
dynamic = ['version']
requires-python = ">=3.110
dependencies = [
]

[tool.setuptools.dynamic]
version = { attr = "cams_downscaling.__version__" }

[tool.setuptools.packages.find]
where = ["cams_downscaling/"]

[project.scripts]


